--- a/backend/package.json
+++ b/backend/package.json
@@ -4,20 +4,23 @@
     "description": "ERP-System Backend mit Node.js und MongoDB",
     "main": "server.js",
     "scripts": {
-      "start": "node server.js",
-      "dev": "nodemon server.js"
+        "start": "node server.js",
+        "dev": "nodemon server.js"
     },
     "dependencies": {
-      "bcryptjs": "^2.4.3",
-      "cors": "^2.8.5",
-      "dotenv": "^16.3.1",
-      "express": "^4.18.2",
-      "express-validator": "^7.0.1",
-      "jsonwebtoken": "^9.0.1",
-      "mongoose": "^7.4.3",
-      "morgan": "^1.10.0"
+        "bcryptjs": "^2.4.3",
+        "cors": "^2.8.5",
+        "dotenv": "^16.3.1",
+        "express": "^4.18.2",
+        "express-fileupload": "^1.5.1",
+        "express-validator": "^7.0.1",
+        "jsonwebtoken": "^9.0.1",
+        "mongoose": "^7.4.3",
+        "morgan": "^1.10.0",
+        "nodemailer": "^6.10.1",
+        "path": "^0.12.7"
     },
     "devDependencies": {
-      "nodemon": "^3.0.1"
+        "nodemon": "^3.0.1"
     }
-  }
+}
