--- a/frontend/frontend/package.json
+++ b/frontend/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^2.2.1",
     "@heroicons/react": "^1.0.6",
+    "@tailwindcss/forms": "^0.5.10",
     "axios": "^1.8.4",
     "date-fns": "^4.1.0",
     "formik": "^2.4.6",
