--- a/backend/package.json
+++ b/backend/package.json
@@ -1,26 +1,30 @@
 {
-    "name": "erp-backend",
+    "name": "erp-system-backend",
     "version": "1.0.0",
-    "description": "ERP-System Backend mit Node.js und MongoDB",
+    "description": "ERP-System Backend",
     "main": "server.js",
     "scripts": {
         "start": "node server.js",
-        "dev": "nodemon server.js"
+        "dev": "nodemon server.js",
+        "test": "echo \"Error: no test specified\" && exit 1"
     },
+    "author": "",
+    "license": "ISC",
     "dependencies": {
         "bcryptjs": "^2.4.3",
         "cors": "^2.8.5",
-        "dotenv": "^16.3.1",
-        "express": "^4.18.2",
-        "express-fileupload": "^1.5.1",
-        "express-validator": "^7.0.1",
-        "jsonwebtoken": "^9.0.1",
-        "mongoose": "^7.4.3",
+        "dotenv": "^10.0.0",
+        "express": "^4.17.1",
+        "express-fileupload": "^1.2.1",
+        "express-validator": "^6.12.1",
+        "jsonwebtoken": "^9.0.2",
+        "mongoose": "^6.0.8",
         "morgan": "^1.10.0",
-        "nodemailer": "^6.10.1",
-        "path": "^0.12.7"
+        "nodemailer": "^6.6.5",
+        "winston": "^3.9.0",
+        "winston-daily-rotate-file": "^4.7.1"
     },
     "devDependencies": {
-        "nodemon": "^3.0.1"
+        "nodemon": "^2.0.13"
     }
 }
